@@ -158,6 +158,20 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|cloud
 operator|.
 name|SolrZkClient
@@ -1988,6 +2002,40 @@ name|NoNodeException
 name|ex
 parameter_list|)
 block|{     }
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|expected
+operator|=
+name|SolrException
+operator|.
+name|class
+argument_list|)
+DECL|method|testInvalidZKAddress
+specifier|public
+name|void
+name|testInvalidZKAddress
+parameter_list|()
+throws|throws
+name|SolrException
+block|{
+name|SolrZkClient
+name|zkClient
+init|=
+operator|new
+name|SolrZkClient
+argument_list|(
+literal|"----------:33332"
+argument_list|,
+literal|100
+argument_list|)
+decl_stmt|;
+name|zkClient
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 annotation|@
 name|Override
