@@ -96,6 +96,18 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|TimeoutException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|atomic
 operator|.
 name|AtomicLong
@@ -777,8 +789,14 @@ block|}
 block|}
 throw|throw
 operator|new
-name|RuntimeException
+name|SolrException
 argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
 name|e
 argument_list|)
 throw|;
@@ -829,8 +847,14 @@ expr_stmt|;
 block|}
 throw|throw
 operator|new
-name|RuntimeException
+name|SolrException
 argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
 name|e
 argument_list|)
 throw|;
